Fix credits not visible with no content

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     display: grid;
     grid-template-rows: 120px 1fr;
     margin: 0;
+    min-height: 100vh;
 
 }
 
@@ -102,7 +103,6 @@ main {
     flex-direction: column;
     justify-content: space-between;
     background-color: var(--main-color);
-    height: max(100%, 100vh);
 }
 
 main .container {
